--- a/index.html
+++ b/index.html
@@ -35,19 +35,15 @@
 
   <!-- MAIN CONTENT -->
   <main class="content">
-    <div class="home-stack">
+  <div class="home-stack">
 
     <!-- =====================
          CASA INTRO
     ===================== -->
     <section class="card">
-      <h2>About CASA</h2>
+      <h2>CASA</h2>
       <p>
-        <!-- YOU WILL FILL THIS -->
-        CO & AN Students Association (CASA) is the official student body
-        representing the Computer Organization and Computer Networks domain.
-        This platform exists to centralize academic resources, events,
-        archives, and student contributions.
+        CO & AN Students Association (CASA) is the successor of formarly known Association of Students of Computer Engineering (ASCE) and Artificial Intelligence Developers and Innovators Association of Students (AIDIAS). It is a student society managed and overseen by Department of Computer Engineering and Artificial Intelligence and Machine Learning, Govt. Polytechnic, Chh. Sambhajinagar
       </p>
     </section>
 
@@ -68,42 +64,42 @@
         <div style="text-align:center;">
           <img src="./assets/images/teachers/t1.jpg"
                style="width:100%; border-radius:16px;">
-          <p style="margin-top:10px;">Teacher Name</p>
+          <p style="margin-top:10px;">Dr. M. A. Ali Sir</p>
         </div>
 
         <!-- TEACHER 2 -->
         <div style="text-align:center;">
           <img src="./assets/images/teachers/t2.jpg"
                style="width:100%; border-radius:16px;">
-          <p style="margin-top:10px;">Teacher Name</p>
+          <p style="margin-top:10px;">Mrs. S. S. Jaiswal Ma'am</p>
         </div>
 
         <!-- TEACHER 3 -->
         <div style="text-align:center;">
           <img src="./assets/images/teachers/t3.jpg"
                style="width:100%; border-radius:16px;">
-          <p style="margin-top:10px;">Teacher Name</p>
+          <p style="margin-top:10px;">Mr. G. U. Jadhav Sir</p>
         </div>
 
         <!-- TEACHER 4 -->
         <div style="text-align:center;">
           <img src="./assets/images/teachers/t4.jpg"
                style="width:100%; border-radius:16px;">
-          <p style="margin-top:10px;">Teacher Name</p>
+          <p style="margin-top:10px;">Mrs. N. M. Masuldar Ma'am</p>
         </div>
 
         <!-- TEACHER 5 -->
         <div style="text-align:center;">
           <img src="./assets/images/teachers/t5.jpg"
                style="width:100%; border-radius:16px;">
-          <p style="margin-top:10px;">Teacher Name</p>
+          <p style="margin-top:10px;">Dr. N. V. Patil Sir</p>
         </div>
 
         <!-- TEACHER 6 -->
         <div style="text-align:center;">
           <img src="./assets/images/teachers/t6.jpg"
                style="width:100%; border-radius:16px;">
-          <p style="margin-top:10px;">Teacher Name</p>
+          <p style="margin-top:10px;">Mrs. P. V. Sontakke Ma'am</p>
         </div>
 
       </div>
@@ -123,85 +119,82 @@
     </section>
 
     <!-- =====================
-         SHOWCASE / HIGHLIGHTS
-    ===================== -->
-    
-    <!-- =====================
      HIGHLIGHTS / IMAGE SLIDER
-===================== -->
-<section class="card">
-  <h2>Highlights</h2>
-  <div class="slider">
-    <img src="https://picsum.photos/id/1015/800/450" class="active" alt="Image 1">
-    <img src="https://picsum.photos/id/1016/800/450" alt="Image 2">
-    <img src="https://picsum.photos/id/1018/800/450" alt="Image 3">
-    <img src="https://picsum.photos/id/1020/800/450" alt="Image 4">
-    <div class="dots"></div>
-  </div>
+    ===================== -->
 
-  <style>
-    /* Fully scoped under .slider */
-    .slider {
-      position: relative;
-      width: 100%;
-      aspect-ratio: 21/9; /* fixed height inside card */
-      overflow: hidden;
-      border-radius: 12px;
-      margin-top: 16px;
-    }
+    <section class="card">
+      <h2>Highlights</h2>
+      <div class="slider">
+        <img src="https://picsum.photos/id/1015/800/450" class="active" alt="Image 1">
+        <img src="./archives/assets/Committe_25-26.jpg" alt="Image 2">
+        <img src="https://picsum.photos/id/1018/800/450" alt="Image 3">
+        <img src="https://picsum.photos/id/1020/800/450" alt="Image 4">
+        <div class="dots"></div>
+      </div>
 
-    .slider img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-      z-index: 0;
-    }
-
-    .slider img.active {
-      opacity: 1;
-      z-index: 1;
-    }
-
-    .slider .dots {
-      position: absolute;
-      bottom: 12px;
-      width: 100%;
-      text-align: center;
-      z-index: 2;
-    }
-
-    .slider .dot {
-      display: inline-block;
-      width: 12px;
-      height: 12px;
-      margin: 0 6px;
-      background: rgba(255,255,255,0.5);
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .slider .dot.active {
-      background: white;
-    }
-
-    /* Optional: prevent inherited card hover transforms from affecting images */
-    .card:hover .slider img {
-      transform: none !important;
-    }
-
-    /* Mobile adjustment */
-    @media (max-width: 768px) {
+      <style>
+      /* Fully scoped under .slider */
       .slider {
-        height: 200px;
+        position: relative;
+        width: 100%;
+        aspect-ratio: 18/9; /* fixed height inside card */
+        overflow: hidden;
+        border-radius: 12px;
+        margin-top: 16px;
       }
-    }
-  </style>
+
+      .slider img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+        z-index: 0;
+      }
+
+      .slider img.active {
+        opacity: 1;
+        z-index: 1;
+      }
+
+      .slider .dots {
+        position: absolute;
+        bottom: 12px;
+        width: 100%;
+        text-align: center;
+        z-index: 2;
+      }
+
+      .slider .dot {
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        margin: 0 6px;
+        background: grey;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: background 0.3s;
+      }
+
+      .slider .dot.active {
+        background: black;
+      }
+
+      /* Optional: prevent inherited card hover transforms from affecting images */
+      .card:hover .slider img {
+        transform: none !important;
+      }
+
+      /* Mobile adjustment */
+      @media (max-width: 768px) {
+        .slider {
+          height: 200px;
+        }
+      }
+      </style>
 
       <script>
         (function(){
@@ -248,7 +241,7 @@
       </script>
     </section>
 
-    </div>
+  </div>
   </main>
 </div>
 
