Dark Mode added

--- a/events/index.html
+++ b/events/index.html
@@ -85,7 +85,12 @@
     </main>
   </div>
 
-  <footer class="fixed-footer">
+<footer class="fixed-footer">
+  <div class="theme-plateau">
+      <button id="theme-toggle" aria-label="Toggle theme">
+      ◧Dark
+      </button>
+    </div>
   <div class="footer-links">
     <a href="https://instagram.com/" target="_blank">📸 Instagram</a>
     <a href="https://linkedin.com/" target="_blank">💼 LinkedIn</a>
