--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
         width: 12px;
         height: 12px;
         margin: 0 6px;
-        background: grey;
+        background: var(--dot-inactive);
         border-radius: 50%;
         cursor: pointer;
         transition: background 0.3s;
       }
 
       .slider .dot.active {
-        background: black;
+        background: var(--dot-active);
       }
 
       /* Optional: prevent inherited card hover transforms from affecting images */
@@ -246,6 +246,11 @@
 </div>
 
 <footer class="fixed-footer">
+    <div class="theme-plateau">
+      <button id="theme-toggle" aria-label="Toggle theme">
+      ◧Dark
+      </button>
+    </div>
     <div class="footer-links">
       <a href="https://instagram.com/" target="_blank">📸 Instagram</a>
       <a href="https://linkedin.com/" target="_blank">💼 LinkedIn</a>
