--- a/notes/index.html
+++ b/notes/index.html
@@ -222,6 +222,11 @@
 </div>
 
 <footer class="fixed-footer">
+  <div class="theme-plateau">
+      <button id="theme-toggle" aria-label="Toggle theme">
+      ◧Dark
+      </button>
+    </div>
   <div class="footer-links">
     <a href="https://instagram.com/" target="_blank">📸 Instagram</a>
     <a href="https://linkedin.com/" target="_blank">💼 LinkedIn</a>
@@ -233,6 +238,7 @@
   </div>
 </footer>
 
+<script src="../assets/js/script.js"></script>
 <script src="./script.js"></script>
 </body>
 </html>
